objects/Contact.object
<CustomObject>
    <fields>
        <fullName>CF_Account_Name__c</fullName>
        <description>This field is to show up related Account Name and used on UI Lookup Fields fieldset</description>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Con_Loan_Portal_Status_Changed__c</fullName>
        <description>Update this checkbox whenever the portal status of a loan changes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan Portal Status Changed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CF_Con_Portal_Loan_Stage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>-D_Con Portal Loan Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Con_Primary_Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Contact_Loan_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Contact Loan Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_DocPlaceholder_Related_Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It stores the loan id of a doc placeholder whenever the portal enabled was done on the placeholder.</description>
        <label>DocPlaceholder Related Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Contacts (DocPlaceholder Related Loan)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Ethnicity__c</fullName>
        <description>Identifies the ethnicity for this contact.</description>
        <label>Ethnicity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mexican</fullName>
                </value>
                <value>
                    <fullName>Puerto Rican</fullName>
                </value>
                <value>
                    <fullName>Cuban</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>I do not wish to provide this information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Govt_Issued_Pic_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Gov&apos;t Issued Pic ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_ID_Issued_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID Issued By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_I_D_Number__c</fullName>
        <description>Created for Contact(Individual) Layout</description>
        <encryptionScheme>None</encryptionScheme>
        <label>I.D. Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Race__c</fullName>
        <description>Identifies the Race of this contact.</description>
        <label>Race</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian Indian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Black or Native American</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian</fullName>
                </value>
                <value>
                    <fullName>Guamanian or Chamorro</fullName>
                </value>
                <value>
                    <fullName>Samoan</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>I do not wish to provide this information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Referral_Notes__c</fullName>
        <description>Used in Contact(Business) Layout.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Notes</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equifax_Frozen_File_Code__c</fullName>
        <description>Frozen file code used for one-time Equifax credit thaw</description>
        <label>Equifax Frozen File Code</label>
        <length>4</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>FinServ__Affiliations__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Affiliations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__AgeAsText__c</fullName>
        <formula>IF(
    ISBLANK(Birthdate),
    
    &apos;&apos;,

    IF(
        And(
            Month(Today()) &gt;= Month(Birthdate),
            Day(Today()) &gt;=  Day(Birthdate)
        ),

        TEXT(Year(Today())- Year(Birthdate)) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; TEXT(Month(Today())-Month(Birthdate)) &amp; &quot; &quot; &amp; &quot;months&quot; &amp; &quot; &quot; &amp; TEXT(Day(Today())-Day(Birthdate)),
    
        IF(
            And(month(Today())&lt; month(Birthdate), Day(Today())&gt;= Day(Birthdate)),
        
            TEXT(Year(Today())-Year(Birthdate)-1) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; TEXT(12 - Month(Birthdate)+month(Today())) &amp; &quot; &quot; &amp; &quot;months&quot; &amp; &quot; &quot; &amp; TEXT(Day(Today())-Day(Birthdate)),
    
            if(
                And( month(Today())&lt; month(Birthdate), Day(Today())&lt; Day(Birthdate)),

                (TEXT( (Year(Today())-Year(Birthdate)-1)) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; TEXT((12 - Month(Birthdate)+month(Today())-1)) &amp; &quot; &quot; &amp; &quot;months&quot; ) &amp; &quot; &quot; &amp;
                    CASE(month(Birthdate),
                        2, TEXT( (28 - Day(Birthdate))+ Day(Today())),
                        4, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        6, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        9, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        11, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        TEXT( (31 - Day(Birthdate))+ Day(Today()))
                    ),
                if(
                    And( month(Today())= month(Birthdate), Day(Today())&lt; Day(Birthdate)),
                
                    (TEXT(Year(Today())- Year(Birthdate)-1)) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; &quot;11&quot; &amp; &quot; &quot; &amp; &quot;months&quot; &amp; &quot; &quot; &amp;
                    CASE(month(Birthdate),
                        2, TEXT( (28 - Day(Birthdate))+ Day(Today())),
                        4, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        6, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        9, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        11, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        TEXT( (31 - Day(Birthdate))+ Day(Today()))
                    ),
                    (TEXT(Year(Today())- Year(Birthdate))) &amp; &quot; &quot; &amp; &quot;years&quot; &amp; &quot; &quot; &amp; TEXT(Month(Today())-Month(Birthdate)-1) &amp; &quot; &quot; &amp; &quot;months&quot; &amp; &quot; &quot; &amp;
                    CASE(month(Birthdate),
                        2, TEXT( (28 - Day(Birthdate))+ Day(Today())),
                        4, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        6, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        9, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        11, TEXT( (30 - Day(Birthdate))+ Day(Today())),
                        TEXT( (31 - Day(Birthdate))+ Day(Today()))
                    )
                )
            )
        )
    ) &amp; &quot; &quot; &amp; &quot;days&quot;
)</formula>
        <label>Age As Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Age__c</fullName>
        <formula>if(And(Month(Today())&gt;= month(Birthdate), Day(Today()) &gt;=  Day(Birthdate)),
Year(Today())- Year(Birthdate) +
(Month(Today())-Month(Birthdate))/12,
if(And(month(Today())&lt; month(Birthdate), Day(Today())&gt;= Day(Birthdate)),
Year(Today())-Year(Birthdate)-1 +
(12 - Month(Birthdate)+month(Today()))/12,
if(And( month(Today())&lt; month(Birthdate), Day(Today())&lt; Day(Birthdate)),
(Year(Today())-Year(Birthdate)-1) + 
((12 - Month(Birthdate)+month(Today())-1))/12,
if(And( month(Today())= month(Birthdate), Day(Today())&lt; Day(Birthdate)),
(Year(Today())- Year(Birthdate)-1) + (11/12),
(Year(Today())- Year(Birthdate)) + 
(Month(Today())-Month(Birthdate)-1)/12))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__AnnualIncome__c</fullName>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__BillingAddress__c</fullName>
        <description>Compound field for Billing Address.</description>
        <formula>if( AND( ISPICKVAL($User.LanguageLocaleKey, &quot;ja&quot;) , NOT( ISBLANK(Account.BillingCountry )) ) , Account.BillingCountry &amp; br(), &quot;&quot; ) &amp;
            if(ISBLANK(Account.BillingStreet), &quot;&quot; , Account.BillingStreet &amp; br()) &amp;
            if(ISBLANK(Account.BillingCity), &quot;&quot; , Account.BillingCity&amp; &quot;, &quot;)&amp;
            if(ISBLANK(Account.BillingState), &quot;&quot; , Account.BillingState&amp; &quot; &quot;)&amp;
            if(ISBLANK(Account.BillingPostalCode), &quot;&quot; , Account.BillingPostalCode &amp; br()) &amp;
            if( OR( ISPICKVAL($User.LanguageLocaleKey, &quot;ja&quot;) , ISBLANK(Account.BillingCountry) ) , &quot;&quot; , Account.BillingCountry )</formula>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Citizenship__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Citizenship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CommunicationPreferences__c</fullName>
        <label>Communication Preferences</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fraud:Phone</fullName>
                </value>
                <value>
                    <fullName>Fraud:Email</fullName>
                </value>
                <value>
                    <fullName>Fraud:SMS</fullName>
                </value>
                <value>
                    <fullName>Promotions:Phone</fullName>
                </value>
                <value>
                    <fullName>Promotions:Email</fullName>
                </value>
                <value>
                    <fullName>Promotions:SMS</fullName>
                </value>
                <value>
                    <fullName>Balance Activities:Phone</fullName>
                </value>
                <value>
                    <fullName>Balance Activities:Email</fullName>
                </value>
                <value>
                    <fullName>Balance Activities:SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ContactPreference__c</fullName>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CountryOfBirth__c</fullName>
        <label>Country Of Birth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CountryOfResidence__c</fullName>
        <description>Country of residence.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CreatedFromLead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__CurrentEmployer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CustomerTimezone__c</fullName>
        <label>Customer Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimati</fullName>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                </value>
                <value>
                    <fullName>Asia/Saigon</fullName>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                </value>
                <value>
                    <fullName>Asia/Dacca</fullName>
                </value>
                <value>
                    <fullName>Asia/Katmandu</fullName>
                </value>
                <value>
                    <fullName>Asia/Calcutta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__EmailVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__EmployedSince__c</fullName>
        <description>Year when client started with current employer.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Employed Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__Facebook__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FinServ__FaxVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fax Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Decline to Specify</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__HomeOwnership__c</fullName>
        <label>Home Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__HomePhoneVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Phone Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__IndividualId__c</fullName>
        <description>Unique ID that relates this individual&apos;s contact record to its account record.</description>
        <formula>Account.FinServ__IndividualId__c</formula>
        <label>Individual ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__IndividualType__c</fullName>
        <description>Individual Type</description>
        <label>Individual Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__LanguagesSpoken__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Languages Spoken</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__LastFourDigitSSN__c</fullName>
        <description>Last 4-Digits of SSN or Tax ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SSN/Tax ID (Last Four Digits)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__LinkedIn__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FinServ__MailingAddress__c</fullName>
        <description>Compound field for Mailing Address.</description>
        <formula>if(ISBLANK(MailingStreet),  &quot;&quot; , MailingStreet &amp; br()) &amp;
if(ISBLANK(MailingCity),  &quot;&quot; , MailingCity&amp; &quot;, &quot; ) &amp;
if(ISBLANK(MailingState),  &quot;&quot; , MailingState&amp; &quot; &quot; ) &amp;
if(ISBLANK(MailingPostalCode),  &quot;&quot; , MailingPostalCode &amp; br()) &amp;
if(ISBLANK(MailingCountry),  &quot;&quot; , MailingCountry)</formula>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__MaritalStatus__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__MarketingOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__MobileVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__MostUsedChannel__c</fullName>
        <label>Most Used Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__MotherMaidenName__c</fullName>
        <description>Mother&apos;s Maiden Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mother&apos;s Maiden Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__NextLifeEvent__c</fullName>
        <label>Next Life Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Higher Education</fullName>
                </value>
                <value>
                    <fullName>Enter Workforce</fullName>
                </value>
                <value>
                    <fullName>Returning to Workforce</fullName>
                </value>
                <value>
                    <fullName>First Home Purchase</fullName>
                </value>
                <value>
                    <fullName>Children</fullName>
                </value>
                <value>
                    <fullName>Renovations</fullName>
                </value>
                <value>
                    <fullName>Moving</fullName>
                </value>
                <value>
                    <fullName>Critical Family Event</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__NumberOfChildren__c</fullName>
        <label>Number Of Children</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__NumberOfDependents__c</fullName>
        <description>Number of dependents.</description>
        <label>Number of Dependents</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__Occupation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Occupation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__OtherAddress__c</fullName>
        <description>Compound field for Other Address.</description>
        <formula>if(ISBLANK(OtherStreet), &quot;&quot; , OtherStreet &amp; br()) &amp;
if(ISBLANK(OtherCity), &quot;&quot; , OtherCity&amp; &quot;, &quot; ) &amp;
if(ISBLANK(OtherState), &quot;&quot; , OtherState&amp; &quot; &quot; ) &amp;
if(ISBLANK(OtherPostalCode), &quot;&quot; , OtherPostalCode &amp; br()) &amp;
if(ISBLANK(OtherCountry), &quot;&quot; , OtherCountry)</formula>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__PreferredName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Preferred Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsBilling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Billing Address as the primary address.</description>
        <label>Primary Address (Billing)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsMailing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Mailing Address as the primary address.</description>
        <label>Primary Address (Mailing)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsOther__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Other Address as the primary address.</description>
        <label>Primary Address (Other)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryAddressIsShipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Shipping Address as the primary address.</description>
        <label>Primary Address (Shipping)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryCitizenship__c</fullName>
        <label>Primary Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryLanguage__c</fullName>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Referrals</relationshipLabel>
        <relationshipName>ContactContactReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Referrer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ContactEmployeeReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferrerScore__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Referrer Score</description>
        <label>Referrer Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__SecondaryCitizenship__c</fullName>
        <label>Secondary Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__SecondaryLanguage__c</fullName>
        <label>Secondary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ShippingAddress__c</fullName>
        <description>Concatenated shipping address field.</description>
        <formula>if( AND( ISPICKVAL($User.LanguageLocaleKey, &quot;ja&quot;) , NOT( ISBLANK(Account.ShippingCountry )) ) , Account.ShippingCountry &amp; br(), &quot;&quot; ) &amp;
            if(ISBLANK(Account.ShippingStreet), &quot;&quot; , Account.ShippingStreet &amp; br()) &amp;
            if(ISBLANK(Account.ShippingCity), &quot;&quot; , Account.ShippingCity&amp; &quot;, &quot;)&amp;
            if(ISBLANK(Account.ShippingState),  &quot;&quot; , Account.ShippingState&amp; &quot; &quot;)&amp;
            if(ISBLANK(Account.ShippingPostalCode), &quot;&quot; , Account.ShippingPostalCode &amp; br())  &amp;
            if( OR( ISPICKVAL($User.LanguageLocaleKey, &quot;ja&quot;) , ISBLANK(Account.ShippingCountry) ) , &quot;&quot; , Account.ShippingCountry)</formula>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__TaxBracket__c</fullName>
        <label>Tax Bracket</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>15%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>28%</fullName>
                </value>
                <value>
                    <fullName>33%</fullName>
                </value>
                <value>
                    <fullName>35%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TaxId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Twitter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Twitter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FinServ__WeddingAnniversary__c</fullName>
        <description>Date of wedding anniversary.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Wedding Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JHJX__EmployerPhoneExtension__c</fullName>
        <description>Users populate this optional number field with the employers phone extension. By default, it is blank.</description>
        <label>Employer Phone Extension</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Age_of_Dependents__c</fullName>
        <description>The user populates this text field to list the age of the dependents in the borrower’s household. By default, this field is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the ages of the dependents in your household.</inlineHelpText>
        <label>Age of Dependents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>